--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.navbar {
+.nav {
   font-family:Exo;
   font-size:1.25em;
   background-color:white;
@@ -8,6 +8,7 @@
   background-color:#9099a2;
   height:400px;
   opacity:.7;
+  
 }
 
 body{
@@ -19,6 +20,7 @@ h1 {
   padding-top:5%;
   margin-top:0px;
   font-size:5.00em;
+ 
 }
 
 .btn-default{
@@ -52,3 +54,57 @@ h1 {
   padding-left:10%;
 }
 
+
+.pageThree {
+  background:url("https://hd.unsplash.com/photo-1423034816855-245e5820ff8c");
+  background-size:cover;
+  height:800px;
+  font-family:Exo;
+  color:lavender;
+  padding-top:5%;
+} 
+
+.pageFour{
+  background:url("https://hd.unsplash.com/photo-1442551382982-e59a4efb3c86");
+  background-size:cover;
+  height:800px;
+  font-family:Exo;
+}
+
+
+.col-centered{
+   float: right;
+    margin: 0 auto;
+}
+
+.container {
+  padding-left: 20%;
+}
+
+.divider{
+  background-color:#9099a2;
+  height:400px;
+  opacity:.7;
+  font-size:5.00em;
+  color:white;
+  position: relative;
+}
+
+.display-middle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+/*Parallax Effect*/
+.divider {
+    opacity: 0.9;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.form-control{
+  width:50%;
+}
