--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+
+body{
+  
+}
 .nav {
   font-family:Exo;
   font-size:1.25em;
   background-color:white;
+  color:maroon;
 }
 
 .jumbotron{
@@ -11,20 +16,17 @@
   
 }
 
-body{
-  background-color:#d5d5d5;
-  color:white;
-}
 
 h1 {
   padding-top:5%;
   margin-top:0px;
   font-size:5.00em;
+  
  
 }
 
-.btn-default{
-  background-color:#657993;
+.btn{
+  background:#657993;
   color:#d5d5d5;
   border:none;
   font-size:1.25em;
@@ -32,42 +34,31 @@ h1 {
 }
 
 .pageOne{
-  background:url("https://hd.unsplash.com/photo-1423034816855-245e5820ff8c");
-  background-size:cover;
-  height:800px;
   font-family:Exo;
   
 }
 
+
 .pageTwo {
-  background:url("https://hd.unsplash.com/photo-1442551382982-e59a4efb3c86");
-  background-size:cover;
-  height:800px;
   font-family:Exo;
   padding-top:20%;
-  padding-left:5%;
+  padding-left:10%;
   color:white;
   
   
 }
 .myPhoto{
   padding-left:10%;
+  
 }
 
 
 .pageThree {
-  background:url("https://hd.unsplash.com/photo-1423034816855-245e5820ff8c");
-  background-size:cover;
-  height:800px;
   font-family:Exo;
-  color:lavender;
   padding-top:5%;
 } 
 
 .pageFour{
-  background:url("https://hd.unsplash.com/photo-1442551382982-e59a4efb3c86");
-  background-size:cover;
-  height:800px;
   font-family:Exo;
 }
 
@@ -84,9 +75,10 @@ h1 {
 .divider{
   background-color:#9099a2;
   height:400px;
-  opacity:.7;
-  font-size:5.00em;
-  color:white;
+  opacity:.2;
+  font-size:4.00em;
+  color:maroon;
+  font-family:Exo;
   position: relative;
 }
 
@@ -96,15 +88,30 @@ h1 {
     left: 50%;
     transform: translate(-50%,-50%);
 }
-/*Parallax Effect*/
-.divider {
-    opacity: 0.9;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
 
 .form-control{
   width:50%;
 }
+
+.row{
+  padding-left: 20%;
+}
+/*Parallax Effect*/
+
+.bgimg-1, .bgimg-2 {
+  opacity: 0.9;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.bgimg-1 {
+    background-image: url("https://hd.unsplash.com/photo-1423034816855-245e5820ff8c");
+  min-height: 700px;
+}
+
+.bgimg-2 {
+    background-image: url("https://hd.unsplash.com/photo-1442551382982-e59a4efb3c86");
+    min-height: 700px;
+}
+
